--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,22 @@ services:
     volumes:
       - ./.db/data:/var/lib/postgresql/data
       - ./.db/tsearch_data:/usr/share/postgresql/13/tsearch_data
+
+  api:
+    build:
+      context: .
+      target: development
+      dockerfile: .docker/Dockerfile
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    ports:
+      - ${APP_PORT}:${APP_PORT}
+    env_file:
+      - ./.env
+    environment:
+      DB_HOST: "database_postgres"
+
+    command: sh -c "npm run migration:run && npm run start:debug"
+    depends_on:
+      - database
