--- a/market-search-be/.docker/Dockerfile
+++ b/market-search-be/.docker/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:14.17-alpine3.14 AS development
 
+RUN apk add --no-cache bash
+RUN wget -O /bin/wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh
+RUN chmod +x /bin/wait-for-it.sh
+
 WORKDIR /usr/src/app
 
 COPY package*.json ./
