--- a/market-search-fe/package.json
+++ b/market-search-fe/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.4",
     "antd": "^4.20.5",
     "axios": "^0.27.2",
+    "moment": "^2.29.3",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/moment": "^2.13.0",
     "@types/styled-components": "^5.1.25"
   }
 }
