feat: test bootstrap

--- a/market-search-be/docker-compose.yml
+++ b/market-search-be/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - ./.db/data:/var/lib/postgresql/data
       - ./.db/tsearch_data:/usr/share/postgresql/13/tsearch_data
       - ./.db/csv:/usr/share/postgresql/13/csv
+      - ./.db/postgres-config.sql:/docker-entrypoint-initdb.d/postgres-config.sql
 
   api:
     build:
