--- a/market-search-be/package.json
+++ b/market-search-be/package.json
@@ -25,7 +25,7 @@
     "migration:create": "typeorm-ts-node-commonjs migration:create",
     "migration:generate": "npm run typeorm migration:generate -n",
     "migration:run": "npm run typeorm migration:run",
-    "migration:revert": "NODE_ENV=test npm run typeorm migration:revert"
+    "migration:revert": "npm run typeorm migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
