--- a/market-search-be/package.json
+++ b/market-search-be/package.json
@@ -15,7 +15,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "pretest": "NODE_ENV=test npm run migration:run",
-    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "test": "NODE_ENV=test jest --verbose --runInBand --collectCoverage",
     "posttest": "NODE_ENV=test ts-node src/database/scripts/teardown.ts",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -78,7 +78,8 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.(t|j)s",
+      "!./src/database/*"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
