--- a/market-search-be/package.json
+++ b/market-search-be/package.json
@@ -72,6 +72,14 @@
       "json",
       "ts"
     ],
+    "coveragePathIgnorePatterns": [
+      "node_modules",
+      "test-config",
+      "interfaces",
+      "jestGlobalMocks.ts",
+      ".module.ts",
+      "./src/database"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.test\\.ts$",
     "transform": {
