feat: :sparkles: add load test

--- a/market-search-be/package.json
+++ b/market-search-be/package.json
@@ -14,6 +14,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "loadtest": "artillery run --output ./load_tests/report.json ./load_tests/loadtest.yml",
+    "loadtest:doc": "artillery report ./load_tests/report.json",
     "pretest": "NODE_ENV=test npm run migration:run",
     "test": "NODE_ENV=test jest --verbose --runInBand --collectCoverage",
     "posttest": "NODE_ENV=test ts-node src/database/scripts/teardown.ts",
@@ -52,6 +54,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "artillery": "^2.0.0-18",
     "dotenv": "^16.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
